<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<name>JIRA ScienceSoft Super Pom</name>
	<description>The JIRA ScienceSoft Plugin super pom project.</description>

	<groupId>com.scn.jira</groupId>
	<artifactId>scn-jira-super-pom</artifactId>
	<packaging>pom</packaging>
	<version>1.0.0</version>

	<repositories>
		<repository>
			<id>atlassian-public</id>
			<url>https://maven.atlassian.com/repository/public/</url>
		</repository>
	</repositories>

	<organization>
		<name>ScienceSoft</name>
		<url>http://www.scnsoft.com</url>
	</organization>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.atlassian.jira</groupId>
				<artifactId>jira-api</artifactId>
				<version>${jira.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>com.atlassian.jira</groupId>
				<artifactId>jira-core</artifactId>
				<version>${jira.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>com.atlassian.jira</groupId>
				<artifactId>jira-view-issue-plugin</artifactId>
				<version>${jira.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>com.atlassian.plugins.rest</groupId>
				<artifactId>atlassian-rest-common</artifactId>
				<version>${atlassian-rest-common}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>javax.ws.rs</groupId>
				<artifactId>jsr311-api</artifactId>
				<version>${jsr311-api}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>com.atlassian.plugin</groupId>
				<artifactId>atlassian-spring-scanner-annotation</artifactId>
				<version>${atlassian.spring.scanner.version}</version>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>com.atlassian.plugin</groupId>
				<artifactId>atlassian-spring-scanner-runtime</artifactId>
				<version>${atlassian.spring.scanner.version}</version>
				<scope>runtime</scope>
			</dependency>
			<dependency>
				<groupId>net.jcip</groupId>
				<artifactId>jcip-annotations</artifactId>
				<version>${jcip}</version>
			</dependency>
			<dependency>
				<groupId>org.mapstruct</groupId>
				<artifactId>mapstruct-jdk8</artifactId>
				<version>${mapstruct}</version>
			</dependency>
			<dependency>
				<groupId>com.atlassian.activeobjects</groupId>
				<artifactId>activeobjects-plugin</artifactId>
				<version>${ao.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.jsoup</groupId>
				<artifactId>jsoup</artifactId>
				<version>${jsoup.version}</version>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>net.sourceforge.jtds</groupId>
				<artifactId>jtds</artifactId>
				<version>${jtds.version}</version>
			</dependency>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${junit}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<properties>
		<revision>4.2.0</revision>
		<jira.version>8.14.1</jira.version>
		<amps.version>8.1.0</amps.version>
		<jira.servicedesk.application.version>4.14.1</jira.servicedesk.application.version>
		<atlassian-rest-common>5.0.1</atlassian-rest-common>
		<plugin.testrunner.version>2.0.1</plugin.testrunner.version>
		<atlassian.spring.scanner.version>1.2.13</atlassian.spring.scanner.version>
		<atlassian.plugin.key>${project.groupId}.${project.artifactId}</atlassian.plugin.key>
		<org.mapstruct.version>1.3.0.Final</org.mapstruct.version>
		<quick.reload.version>3.0.0</quick.reload.version>
		<frontend-maven-plugin.version>1.10.0</frontend-maven-plugin.version>
		<maven-resources-plugin.version>3.2.0</maven-resources-plugin.version>
		<jsr311-api>1.1.1</jsr311-api>
		<jcip>1.0</jcip>
		<mapstruct>1.3.0.Final</mapstruct>
		<ao.version>3.0.0</ao.version>
		<jsoup.version>1.8.3</jsoup.version>
		<jtds.version>1.3.1</jtds.version>
		<skipCopyResource>false</skipCopyResource>

		<junit>4.11</junit>
		<!-- Maven project settings -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<!-- AMPS properties -->
		<atlassian.dev.mode>false</atlassian.dev.mode>
		<skipTests>true</skipTests>
		<compressResources>false</compressResources>
	</properties>

	<modules>
		<module>scn-plugins-frontend</module>
		<module>scn-worklog-plugin</module>
		<module>scn-logtime-plugin</module>
		<module>scn-mytime-gadget-plugin</module>
		<module>scn-timesheet-plugin</module>
		<module>scn-clone-project-plugin</module>
		<module>scn-automation-plugin</module>
		<module>scn-plugins-integration</module>
	</modules>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-clean-plugin</artifactId>
				<version>3.0.0</version>
				<configuration>
					<excludeDefaultDirectories>true</excludeDefaultDirectories>
					<filesets>
						<fileset>
							<directory>target</directory>
							<excludes>
								<exclude>container/**</exclude>
								<exclude>jira/**</exclude>
							</excludes>
						</fileset>
					</filesets>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>release</id>
			<properties>
				<atlassian.dev.mode>true</atlassian.dev.mode>
				<compressResources>true</compressResources>
			</properties>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-resources-plugin</artifactId>
						<version>${maven-resources-plugin.version}</version>
						<executions>
							<execution>
								<id>copy-resources</id>
								<phase>package</phase>
								<goals>
									<goal>copy-resources</goal>
								</goals>
								<configuration>
									<outputDirectory>${basedir}/../plugins</outputDirectory>
									<resources>
										<resource>
											<directory>target</directory>
											<includes>
												<include>${project.artifactId}-${project.version}.jar</include>
											</includes>
										</resource>
									</resources>
									<skip>${skipCopyResource}</skip>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
